<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12dp"
    android:layout_marginHorizontal="12dp"
    android:layout_marginVertical="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_story"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/story"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/iv_story"
            app:layout_constraintStart_toStartOf="@id/iv_story"
            app:layout_constraintTop_toBottomOf="@id/iv_story"
            tools:text="@string/title" />

        <TextView
            android:id="@+id/tv_desc_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/line_separator"
            app:layout_constraintEnd_toEndOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            tools:text="@string/desc" />

        <View
            android:id="@+id/line_separator"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_marginVertical="8dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/tv_desc_item" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>